# mesh2voxel

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  compileShader.py
data/: README.md
mesh2voxel/: CMakeLists.txt  mesh2voxel.cpp  mesh2voxel.h
src/: main.cpp  mesh2voxel.cpp  mesh2voxel.h
